# PumpkinBotPiROS

./: .gitignore  README.md  frames.gv  junk.txt
install/pumpkin_bot_bringup/share/pumpkin_bot_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pumpkin_bot_description/share/pumpkin_bot_description/: package.dsv  package.ps1  package.sh  package.zsh
install/pumpkin_cpp_pkg/lib/pumpkin_cpp_pkg/: odometry  pumpkin_clock
install/pumpkin_cpp_pkg/share/pumpkin_cpp_pkg/: local_setup.dsv  (+7 more)
log/: latest_build
pumpkin_bot_bringup/: CMakeLists.txt
pumpkin_bot_bringup/config/: nav2_params.yaml  slam_toolbox_mapper_params_localization.yaml  slam_toolbox_mapper_params_offline.yaml  slam_toolbox_mapper_params_online_sync.yaml
pumpkin_bot_bringup/launch/: PumpkinBot.desktop_copy  launch_pumpkin_bot.sh  pumpkin_bot_launch.py
pumpkin_bot_description/: CMakeLists.txt
pumpkin_bot_description/config/: ekf.yaml
pumpkin_bot_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pumpkin_bot_description/launch/: empty.txt
pumpkin_bot_description/log/: latest_build
pumpkin_bot_description/rviz/: urdf_config.rviz
pumpkin_bot_description/src/description/: pumpkin_bot_description.urdf
pumpkin_cpp_pkg/: CMakeLists.txt
pumpkin_cpp_pkg/src/: odometry.cpp  pumpkin_clock.cpp
pumpkin_py_pkg/: package.xml  setup.cfg  setup.py
pumpkin_py_pkg/pumpkin_py_pkg/: april_tag.py  desktop_ui.py  pi2_ui.py  robot_ui.py
scripts/: pumpkin_bot_1_launch.sh  pumpkin_bot_2_launch.sh  pumpkin_bot_desktop_launch.sh
(+22 files in other folders)
